--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
         <img id="3" src="images/image3.jpg" alt="">
         <img id="4" src="images/image4.jpg" alt="">
       </div>
+      <p></p>
 
-      <a href="#" class="left">Previous</a>
-      <a href="#" class="right">Next</a>
+
+      <a href="#" class="left" onclick="prev(); return false;">Previous</a>
+      <a href="#" class="right" onclick="next(); return false;">Next</a>
     </div>
 
     <script type="text/javascript" src="js/jquery.js"></script>
